src/objects/OptimizationInsight__c/OptimizationInsight__c.object-meta.xml
<CustomObject>
    <label>Optimization Insight</label>
    <nameField>
        <label>Optimization Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optimization Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>