src/objects/OptimizationInsight__c/fields/Apps_In_Safe_Zone_After__c.field-meta.xml
<CustomField>
    <fullName>Apps_In_Safe_Zone_After__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Appt. In Safe Zone After</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>