src/objects/OptimizationInsight__c/fields/GISSaverMonitoring_Processed__c.field-meta.xml
<CustomField>
    <fullName>GISSaverMonitoring_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of SA gaps that where examined by the GIS reduction process (that uses 90km/h aerial travel (very optimistic)</description>
    <inlineHelpText>The number of SA gaps that where examined by the GIS reduction process (that uses 90km/h aerial travel (very optimistic)</inlineHelpText>
    <label>GISSaverMonitoring Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>