src/objects/OptimizationInsight__c/fields/NonAppointments_Response_Time_Before__c.field-meta.xml
<CustomField>
    <fullName>NonAppointments_Response_Time_Before__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non Appt. Response Time (In Mins) Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>