src/objects/OptimizationInsight__c/fields/Number_Of_Internal_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Internal_Resources__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Resources</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>