src/objects/OptimizationInsight__c/fields/Pinned_SAs_All__c.field-meta.xml
<CustomField>
    <fullName>Pinned_SAs_All__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Pinned SAs (All)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>