src/objects/OptimizationInsight__c/fields/Same_Sites_Before__c.field-meta.xml
<CustomField>
    <fullName>Same_Sites_Before__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SAs Scheduled At Same Sites Before</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>