src/objects/OptimizationInsight__c/fields/SAs_with_Zero_Candidate__c.field-meta.xml
<CustomField>
    <fullName>SAs_with_Zero_Candidate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of SAs which do not have any resource candidates to schedule.</description>
    <inlineHelpText>Number of SAs which do not have any resource candidates to schedule.</inlineHelpText>
    <label>SAs with Zero Candidate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>