src/objects/OptimizationInsight__c/fields/Scheduled_Tasks_Before__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Tasks_Before__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scheduled SA Before</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>