src/objects/OptimizationInsight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Optimization_Request__c</columns>
    <columns>Execution_Type__c</columns>
    <columns>Optimization_Start__c</columns>
    <columns>Optimization_Finish__c</columns>
    <columns>Service_Territory_Names__c</columns>
    <columns>Run_Name__c</columns>
    <columns>Appointments_Response_Time_After__c</columns>
    <columns>NonAppointments_Response_Time_After__c</columns>
    <columns>Comments__c</columns>
    <columns>Scheduled_Appointments_Before__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>