src/objects/OptimizationInsight__c/listViews/lst.listView-meta.xml
<ListView>
    <fullName>lst</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>lst</label>
</ListView>